// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionIdSchema doesn't allow empty 1`] = `
"[
  {
    \\"code\\": \\"too_small\\",
    \\"minimum\\": 1,
    \\"type\\": \\"string\\",
    \\"inclusive\\": true,
    \\"message\\": \\"Should be at least 1 characters\\",
    \\"path\\": []
  },
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionIdSchema doesn't allow null 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"string\\",
    \\"received\\": \\"null\\",
    \\"path\\": [],
    \\"message\\": \\"Expected string, received null\\"
  }
]"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 1`] = `
"[
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 2`] = `
"[
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 3`] = `
"[
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionIdSchema doesn't allow special characters except _, [, and ] 4`] = `
"[
  {
    \\"validation\\": \\"regex\\",
    \\"code\\": \\"invalid_string\\",
    \\"message\\": \\"Question ID can only include letters, numbers, \\\\\\"_\\\\\\", \\\\\\"[\\\\\\", and \\\\\\"]\\\\\\".\\",
    \\"path\\": []
  }
]"
`;

exports[`QuestionIdSchema doesn't allow undefined 1`] = `
"[
  {
    \\"code\\": \\"invalid_type\\",
    \\"expected\\": \\"string\\",
    \\"received\\": \\"undefined\\",
    \\"path\\": [],
    \\"message\\": \\"Required\\"
  }
]"
`;
